Update: Fix responsive dashboard menu version mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,6 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 
-
-
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.13 0.028 261.692);
@@ -38,8 +36,6 @@
   --sidebar-border: oklch(0.928 0.006 264.531);
   --sidebar-ring: oklch(0.707 0.022 261.325);
 }
-
-
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -93,7 +89,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(15,23,42,0.15);
+  background: rgba(15, 23, 42, 0.15);
   border-radius: 9999px;
 }
 
@@ -101,20 +97,16 @@ body {
   background: transparent;
 }
 
-
-
 @media print {
- 
   body * {
     visibility: hidden;
   }
-  
-  
-  #printable-receipt, #printable-receipt * {
+
+  #printable-receipt,
+  #printable-receipt * {
     visibility: visible;
   }
-  
-  
+
   #printable-receipt {
     position: absolute;
     left: 0;
@@ -124,9 +116,17 @@ body {
     box-shadow: none !important;
   }
 
- 
   .print-hide {
     display: none !important;
   }
 }
 
+@media (max-width: 768px) {
+  .mobile-no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .mobile-no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
